[package]
name = "rust-c-s"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.11.0"
prost = "0.12.4"
tokio = {version = "1.37.0", features = ["full"]}
mongodb = "2.2"
bson = "2.2"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
tonic-build = "0.11.0"


[[bin]]
name = "grpc-server"
path = "src/server.rs"

[[bin]]
name = "grpc-client"
path = "src/client.rs"